# BMSTU-CS-Project-2025

./: .dockerignore  .gitignore  README.md
.github/workflows/: Backend-CI.yml  Frontend-CI.yml
backend/: Dockerfile  README.md
backend/source/: Application.cpp  Application.hpp  CMakeLists.txt  Environment.cpp  Environment.hpp  Main.cpp
backend/source/components/controllers/: TaskController.cpp  TaskController.hpp  TestController.cpp  TestController.hpp  UserController.cpp  UserController.hpp
backend/source/components/models/: TaskModel.cpp  TaskModel.hpp  TestModel.cpp  TestModel.hpp  UserModel.cpp  UserModel.hpp
backend/source/core/: Listener.cpp  Listener.hpp  Router.cpp  Router.hpp  Session.cpp  Session.hpp
backend/source/core/factories/: ResponseFactory.cpp  ResponseFactory.hpp
backend/source/default/components/: Controller.cpp  Controller.hpp  Model.cpp  Model.hpp
backend/source/default/components/views/: Error.cpp  Error.hpp  View.cpp  View.hpp
backend/source/default/web/: Routes.cpp  Routes.hpp
backend/source/storage/: Manager.cpp  Manager.hpp  Session.cpp
backend/source/web/: Components.cpp  Points.cpp
database/: Init-example.sh
frontend/source/: index.html
frontend/source/assets/css/: style.css
k8s/: backend-deployment.yaml
